codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__standalone_image_generation_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 917
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Generating image (0s • esc to interrupt)                                      "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
