codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__startup_header_active_cell.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2612
expression: active_blob(&chat)
---
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)              │
│                                       │
│ model:     loading   /model to change │
│ directory: /home/user/project         │
╰───────────────────────────────────────╯
